explain and comment out apple touch icons, closes #3

--- a/index.html
+++ b/index.html
@@ -39,12 +39,22 @@ http://html5boilerplate.com/
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+        <!-- Apple Touch Icons:
+
+        Apple touch icons are used only in iOS when a user adds your website to
+        their homescreen (like an app). These images appear as the "app icons".
+        Since this is very rare, these are commented out - you can remove them
+        unless you need them.
+
+         -->
+         
         <!-- For apple retina display devices (iPhone 4 and newer) -->
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
+        <!-- <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" /> -->
         <!-- For iPad -->
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
+        <!-- <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" /> -->
         <!-- For older iPhones -->
-        <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-57x57.png" />
+        <!-- <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-57x57.png" /> -->
 
         <!-- Normalize:
 
