use http:// to load jquery
- this works better on localhost
- new devs are not worried about https anyway

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ http://html5boilerplate.com/
 
         This script tag tries to load jquery from Google's CDN. A CDN is a Content Delivery Network, and you can leverage them to serve commonly-used assets, like jQuery to your users. It's better for you to use a CDN than to host the files yourself because it saves you bandwith, and the user has a higher likelihood of having a cached version of the file from a CDN, which means your page will load a tiny bit faster.
         -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
