--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@ http://html5boilerplate.com/
         Read more about favicons here: http://iconhandbook.co.uk/reference/chart/favicons/
         -->
 
+        <!-- Fonts:
+
+        Google Web Fonts are awesome. You can use them to add tons of awesome fonts to your work for free. Just follow the instructions to include them - in this case, I'm just adding a link tag to their fonts and they're handling the rest.
+
+        https://www.google.com/fonts
+        -->
+        <link href='http://fonts.googleapis.com/css?family=Average+Sans|Fjalla+One' rel='stylesheet' type='text/css'>
+
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <!-- For apple retina display devices (iPhone 4 and newer) -->
